# LinearResponseVariationalBayes.cpp

./: .gitignore  CMakeLists.txt  README.md
include/: box_parameters.h  differentiate_jacobian.h  exponential_families.h  kahan_summation.h  monte_carlo_parameters.h  sub_hessian.hpp  transform_hessian.h  variational_parameters.h
inst/: eigen_examples.cpp  test_functions_hessian_transform.lyx
src/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  core  exponential_families.cpp  install_manifest.txt  kahan_summation.cpp  libLinearResponseVariationalBayes.so...  libLinearResponseVariationalBayes.so.0  libLinearResponseVariationalBayes.so.0.0.0  libLinearResponseVariationalBayes.so.1.0.0  monte_carlo_parameters.cpp  test_functions_hessian_transform.lyx  transform_hessian.cpp  variational_parameters.cpp
src/test/: CMakeLists.txt  CMakeLists.txt~  Makefile  box_parameters_test.cpp  cmake_install.cmake  kahan_summation_test  monte_carlo_parameter_test  monte_carlo_parameter_test.cpp  test_eigen.h  transform_hessian_test  transform_hessian_test.cpp  transform_hessian_test_functions.h  variational_parameter_prob_test.cpp  variational_parameter_test  variational_parameter_test.cpp
